------------------------------------------------------
Version 1.12 - 3.0.2
------------------------------------------------------

Additions
- Added the new Blacklist to the API
- Added a new upgrade, the everlasting upgrade, which makes backpacks never despawn.
- Added the ability to equip backpacks
    - NO RENDERING YET
- Added ability to remove upgrades
    - Backpack + shears in an anvil

Changes
- None

Bug Fixes
- Fixed dupe bug when opening a backpack and tossing it away simultaneously.
- Fixed odd interactions with inventory sorting mods
- Fixed null backpack appearing as an ingredient when crafting higher tier ones

------------------------------------------------------
Version 1.12 - 3.0.1
------------------------------------------------------

Additions
- Added data carry-over to the backpack upgrading recipe. No more lost items and upgrades.
- Added a global blacklist to allow pack makers to stop given items or NBT tags from being inserted into the backpack.
- Added Inventory Tweaks support.
- Added additional points upgrade. Super duper useful right now. I swear.

Changes
- None

Bug Fixes
- Fixed an issue where closing the backpack would cause a casting error.

------------------------------------------------------
Version 1.12 - 3.0.0
------------------------------------------------------

ALPHA build for 1.12, first one since the rewrite.

Massive changes compared to the 1.10 version occurred that will be
documented in the future in more depth (mostly just missing features).

Additions
- Fancy API + clean codebase
- Tiered backpacks with functional inventories

Changes
- Removed equipping backpacks
- Removed nearly every upgrade
- Removed extra JEI integration
- Removed mod integration

Bug Fixes
- None