@@ -2,6 +2,7 @@
   "parent": "item/generated",
   "textures": {
     "layer0": "ironbackpacks:items/backpack_basic_base",
-    "layer1": "ironbackpacks:items/backpack_basic_border"
+    "layer1": "ironbackpacks:items/backpack_basic_border",
+    "layer2": "ironbackpacks:items/backpack_basic_latch_dark"
   }
 }
